[gd_scene load_steps=16 format=3 uid="uid://ctt4gweqtowtk"]

[ext_resource type="PackedScene" uid="uid://cdigbqh3450eu" path="res://models/props/button_large/button_large.glb" id="1_281ha"]
[ext_resource type="Script" uid="uid://dwl5xixpuxfb2" path="res://models/button_large.gd" id="2_5lf25"]
[ext_resource type="Texture2D" uid="uid://dfhpyn8qiuxov" path="res://models/props/button_large/button_large_Button_large_D.png" id="3_oxqkf"]
[ext_resource type="Texture2D" uid="uid://ewlo3ppw0n78" path="res://models/props/button_large/button_large_Button_large_E.png" id="4_257a8"]
[ext_resource type="Texture2D" uid="uid://d4q8ybwkbrr6" path="res://models/props/button_large/Button_large_R.png" id="5_fejpa"]
[ext_resource type="AnimationLibrary" uid="uid://o2x6p0j0keuq" path="res://models/button_anims.res" id="6_257a8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cw0yw"]
albedo_texture = ExtResource("3_oxqkf")
roughness = 0.0
roughness_texture = ExtResource("5_fejpa")
emission_enabled = true
emission_energy_multiplier = 0.0
emission_texture = ExtResource("4_257a8")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5lf25"]
height = 0.13619995
radius = 0.9042969

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5lf25"]
animation = &"Pressed"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lye6t"]
animation = &"Released"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mkwvs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oxqkf"]
switch_mode = 1
advance_mode = 2
advance_condition = &"isPressed"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_257a8"]
advance_mode = 2
advance_condition = &"!isPressed"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fejpa"]
states/Pressed/node = SubResource("AnimationNodeAnimation_5lf25")
states/Pressed/position = Vector2(571, 107)
states/Released/node = SubResource("AnimationNodeAnimation_lye6t")
states/Released/position = Vector2(394, 107)
transitions = ["Start", "Released", SubResource("AnimationNodeStateMachineTransition_mkwvs"), "Released", "Pressed", SubResource("AnimationNodeStateMachineTransition_oxqkf"), "Pressed", "Released", SubResource("AnimationNodeStateMachineTransition_257a8")]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_281ha"]
height = 0.4489746
radius = 0.80615234

[node name="button_large" instance=ExtResource("1_281ha")]
script = ExtResource("2_5lf25")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/1/position = Vector3(0, 0.5449779, 0)
bones/1/scale = Vector3(1, 0.4172759, 1)

[node name="button_large" parent="Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_cw0yw")

[node name="StaticBody3D" type="StaticBody3D" parent="Armature/Skeleton3D/button_large" index="0"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Armature/Skeleton3D/button_large/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.063339196, 0)
shape = SubResource("CylinderShape3D_5lf25")

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
&"": ExtResource("6_257a8")
}
speed_scale = 4.0

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_fejpa")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/!isPressed = false
parameters/conditions/isPressed = false

[node name="Area3D" type="Area3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22619629, 0)
shape = SubResource("CylinderShape3D_281ha")

[node name="ButtonSound" type="AudioStreamPlayer3D" parent="." index="4"]
volume_db = -10.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
